# DSA

./: README.md  package-lock.json
0001-Lists-stacks-and-queues/: ArrayList.h
001-Bit-counting/: main.cpp  main.py
001-multiples_of_3_or_5/: CMakeLists.txt  go.mod  main.cpp  main.go  main_test.go  multiple_sum.js  multiple_sum.py  number_sum.h  test_multiple_sum.py  test_number_sum.cpp
002-Sum-lowest-integers/: main.cpp  main.py
002-two_oldest/: two_oldest.cpp  two_oldest.py
003-ArrayDiff/: ArrayDiff.java  ArrayDiffTest.java  Test.java  test.js
003-singly-linked-lists/: main.py
004-String-Ends-With/: main.cpp  main.py
005-Is-This-a-triangle/: main.cpp  main.py
006-Get-Middle-Character/: main.cpp  main.py
007-Shortest-Word/: main.cpp  main.py
008-Armstrong-Number/: main.cpp  main.py
009-domain-name-extraction/: main.py
010-permutations/: main.cpp
011-recursions/: main.cpp
012-largest-value/: main.cpp
013-roman-to-numeric/: main.py
014-amount-of-cake/: main.py  test_main.py
015-processing-braces/: main.py
016-morse-code-decoder/: main.py
ArrayDiff/: ArrayDiffTest.java  arrayDiff.cpp  arrayDiff.js  arrayDiff.py  array_diff.go  array_diff_test.go  test.js  test_array_diff.py
Java/listSum/: listSum.java
PythonProgramming101/: dictmap.py
PythonProgramming101/DrawProgramNewCommand/: main.py
multiples_of_3_or_5/: MultipleSum.java  multiple_sum.ex  multiple_sum.js  multiple_sum.test.js  number_sum.cpp
two_oldest/: two_oldest.exs
